<resources>
    <string name="app_name">TheHack</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="background_for_launch_screen">Background for launch screen</string>
    <string name="pink_pillow_selection">Pink pillow selection</string>
    <string name="red_pillow_string_pink_pillow_selection">Red pillow @string/pink_pillow_selection</string>
    <string name="yellow_pillow_selection">Yellow pillow selection</string>
    <string name="selectedimage">SelectedImage</string>
    <string name="pink_string_pink_pillow_selection">Pink @string/pink_pillow_selection</string>
    <string name="purple_pillow_string_pink_pillow_selection">Purple pillow @string/pink_pillow_selection</string>
    <string name="green_pillow_selection">Green pillow selection</string>
    <string name="blue_pillow_selection">Blue pillow selection</string>
    <string name="gray_pillow_selection">Gray pillow selection</string>
    <string name="text_header">text header</string>
    <string name="select_your_favorite_color_to_punch">Select your favorite color to punch!</string>
    <string name="pillow_background">Pillow_background</string>
    <string name="punch">PUNCH!</string>
    <string name="punch_text">punch text</string>
    <string name="exit_image">Exit image</string>
    <string name="select_the_most_relaxing_color">Select the most relaxing color!</string>
    <string name="blood">Blood</string>
    <string name="button">Button</string>
</resources>
