<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thehack.PillowSmash">

    <FrameLayout
        android:id="@+id/button_increase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pillow_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pillow_background"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/pillow_0006_grey" />

        <ProgressBar
            android:id="@+id/punch_progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/punch_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/punch_text"
            android:onClick="completedGame"
            android:text="@string/punch"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/red_blood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@android:color/transparent"
            android:scaleType="matrix"
            android:visibility="visible"
            app:srcCompat="@android:color/holo_red_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="HitPillow"
                android:text="Button" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="completedGame"
                android:text="Button" />
        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
